2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_memcpy.c:

	ifdef's in memcpy.c only support i386 arch should
	also support i86_64

2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_xvmc.c:

	K8M890 does not support XvMC like the other chipsets
	disable it for now

2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_video.h:
	* unichrome/via_swov.h:
	* unichrome/via_swov.c:

	Made K8M890 XV FIFO settings match K8M800
	Enabled XV_DEBUG

2006-12-07  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_mode.h:

	Updated the BandwidthTable for K8M890 chipset.

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Initialize the AGP ring buffer before command submission.

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen), (viaInitExa):

	Indent via_accel.c

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload):

	Fix download from screen which was reusing kernel argument
	data that was altered by the kernel.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen):

	Reimplement download from screen to something more easily
	debuggable.

2006-12-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
	
	* unichrome/via_driver.c:
 	
	Fixed some of the boolean option changes that are
	inverses such as DisableIRQ. 
