@@ -319,8 +319,7 @@
 	fence;								\
     }									\
 
-#if !defined(__i386__) || (defined(linux) \
-	&& (defined(__i386__) || defined(__x86_64__))) 
+#if !defined(__i386__) || (defined(linux) && defined(__i386__)) 
 
 static void libc_YUV42X(unsigned char *dst,
 			const unsigned char *src,
@@ -364,8 +363,8 @@ static void libc_YUV42X(unsigned char *dst,
 }
 #endif
 
-//#if defined(__i386__) || defined (__x86_64__)
-#if defined(__i386__)
+#ifdef __i386__
+
 
 
 /* linux kernel __memcpy */
