@@ -1,3 +1,13 @@
+2006-12-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
+	* unichrome/via_memcpy.c:
+	* unichrome/via_swov.c:
+
+	Removed the previous changes I am not ready to rewrite
+	the assembly code for x86_64.
+	The ColorSpace registers were being setup incorrectly
+	for VT3336
+
 2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
 	* unichrome/via_memcpy.c:
